--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username:  padraignix
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-modernist
+theme: jekyll-theme-midnight
 plugins:
   - jekyll-feed
 
