--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,3 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
@@ -13,15 +6,37 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Padraignix's InfoSec Blog
+title: Padraignix's InfoSec Blog_
 email: padraignix@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Personal blog covering CTF events, writeups, general Security topics
+  Personal blog covering CTF events, Security Infrastructure, Cryptography, Emulator development and related adventures
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "/Padraignix.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: Padraignix_
+url: "https://padraignix.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+
+# Google Analytics
+google_analytics: UA-148947358-1
+
+social_links:
+    twitter: Padraignix_
+    github:  padraignix
+    rss: rss
+    linkedin: downingpatrick
+    hackerone: padraignix
+    
 github_username:  padraignix
 
+home:
+    url: "/"
+    title: "Home"
+
+about:
+    url: "/about/"
+    title: "About"
+
+archive:
+    url: "/archive/"
+    title: "Archive"
+    
 # Build settings
 markdown: kramdown
 theme: jekyll-theme-time-machine
@@ -34,8 +49,3 @@ plugins:
 # exclude:
 #   - Gemfile
 #   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
