--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ stackoverflow_link:
 xing_link:
 facebook_link:
 hackerone_username: padraignix
+hackthebox_username: 137488
 
 # Footer
 #footer_left: "Made with <i class=\"fa fa-heart\"></i> by <a href=\"https://twitter.com/_JacobTomlinson\">Jacob Tomlinson</a>"
