Twitter and Post page updates

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ addthis_id: ra-5d90e1af4e80d2a2
 post_limit: 5
 
 # Social usernames/URLs
-twitter_username: Padraignix_
+twitter_username: _PatrickDowning
 github_username: padraignix
 instagram_username: 
 reddit_username: 
