Projects Update + Social Icon ctftime swap

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ stackoverflow_link:
 xing_link:
 facebook_link:
 hackerone_username: padraignix
+ctftime_username: 81470
 hackthebox_username: 137488
 #twitch_username: padraignix00
 
@@ -46,3 +47,4 @@ include: [.well-known]
 
 plugins:
   - jekyll-sitemap
+#  - jekyll-paginate-v2
