--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ google_site_verification: 4x5Z0Ong7lBlu0f5GVm2D_Fma9DU4A_GvFaBJA5lOOo # change t
 
 # Only if your site type is GitHub Project sites and doesn't have a custom domain,
 # change below value to '/projectname'.
-baseurl: ''
+baseurl: '/padraignix.github.io'
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
 timezone: America/Toronto
