--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: Check baseurl
         run: |
-          baseurl="$(grep '^baseurl:' _config.yml | yq r - baseurl)"
+          baseurl="$(grep '^baseurl:' _config.yml | yq eval)"
           if [[ -n $baseurl ]]; then
             echo "SPEC_TEST=_site_no_baseurl" >> $GITHUB_ENV
           fi
