Updating page-deploy ruby version

--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -19,7 +19,8 @@ jobs:
     steps:
       - uses: actions/setup-ruby@v1
         with:
-          ruby-version: 2.6.x
+          ruby-version: 3
+          bundler-cache: true
 
       - name: Install tools
         run: |
